--- a/syst10199/projects/home2021/index_public.html
+++ b/syst10199/projects/home2021/index_public.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--
-Author: 		  Ellen Bajcar
+Author: 		  Rohini Khosla
 File name: 		index_public.html
 Date Created:	Summer 2021
 Date Updated: Summer 2021
@@ -29,7 +29,7 @@ Description:
 
 <body>
 	<header>
-		<h1>Non-members Start Here</h1>
+		<h1>New gamers can Start Here</h1>
 	</header>
   <nav>
     <a href="#">About</a>
